fix style issue on small screen 2
1. make date picker control more smaller
2. refix buttons on phone form

--- a/app/templates/client/source/styles/core/base.styl
+++ b/app/templates/client/source/styles/core/base.styl
@@ -22,3 +22,12 @@
 .hide-gt-lg
     +generate-media($sizes[2])
         display none
+
+// date picker size for small screen
+.lx-date-picker__day
+    +sm()
+        line-height 16px
+        a
+            width 16px
+            height 16px
+            line-height 16px
